# PanoramaSticher

./: .gitignore  CMakeLists.txt  mosaic.cpp
